<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="welcome_title">Hung Shoe Store</string>
    <string name="welcome_message">Welcome to Hung\'s Shoe Store</string>
    <string name="continue_text">Continue</string>
    <string name="go_to_shoe_list">Go to Shoe List</string>
    <string name="logout">Logout</string>
    <string name="shoe_size">Size: %.1f</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name_is_required">Name is required</string>
    <string name="instruction_1">1. Press \"Go to Shoe List\" to discover our shoes</string>
    <string name="instruction_2">2. In \"Shoe List\" screen, You can press on plus (+) button to add a new shoe</string>
</resources>
