<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.screen.shoe.ShoeViewModel" />

        <variable
            name="detailViewModel"
            type="com.udacity.shoestore.screen.shoe.ShoeDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shoeNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/nameEditText"
                android:text="@string/shoe_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/nameTextInputLayout"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/companyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:labelFor="@id/companyEditText"
                android:text="@string/company"
                app:layout_constraintBottom_toBottomOf="@id/companyEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/companyEditText" />

            <TextView
                android:id="@+id/sizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:labelFor="@id/sizeEditText"
                android:text="@string/size"
                app:layout_constraintBottom_toBottomOf="@id/sizeEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/sizeEditText" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:labelFor="@id/descriptionEditText"
                android:text="@string/description"
                app:layout_constraintBottom_toBottomOf="@id/descriptionEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/descriptionEditText" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:barrierMargin="16dp"
                app:constraint_referenced_ids="shoeNameTextView, companyTextView, sizeTextView, descriptionTextView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:inputType="text"
                    android:text="@={detailViewModel.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/barrier"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/companyEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:inputType="text"
                android:text="@={detailViewModel.company}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout" />

            <EditText
                android:id="@+id/sizeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/companyEditText"
                app:text="@={detailViewModel.size}" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@={detailViewModel.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/sizeEditText" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> detailViewModel.cancel()}"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/saveButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.saveShoe(detailViewModel.shoe)}"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancelButton"
                app:layout_constraintTop_toTopOf="@id/cancelButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>